terraform/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attendancecrm-deployment
  namespace: attendance-crm
  labels:
    app: attendancecrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: attendancecrm
  template:
    metadata:
      labels:
        app: attendancecrm
    spec:
      securityContext:
        runAsUser: 0
      serviceAccountName: attendance-crm
      containers:
        - name: attendancecrm-container
          image: acrproduksaks.azurecr.io/attendancecrm:v4
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:                    
            - name: secrets-store
              mountPath: "/mnt/secrets"
              readOnly: true
      volumes:                             
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: attendance-crm-keyvault
